# gan-cyber-range-sim

./: .dockerignore  .editorconfig  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ADVANCED_RESEARCH_DEPLOYMENT.md  API.md  ARCHITECTURE.md  AUTONOMOUS_RESEARCH_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_BREAKTHROUGH_COMPLETION.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_v2.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_TERRAGON_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_v4_COMPLETION_REPORT.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_DEPLOYMENT_GUIDE.md  BREAKTHROUGH_RESEARCH_PAPER.md  CHANGELOG.md  CLAUDE_IMPROVEMENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  Dockerfile  EXECUTIVE_RESEARCH_SUMMARY.md  GLOBAL_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_TODO.md  Makefile  PROJECT_CHARTER.md  QUALITY_GATES_IMPLEMENTATION_SUMMARY.md  README.md  RESEARCH_PUBLICATION_READY.md  SDLC_ENHANCEMENT_REPORT.md  SECURITY.md  SECURITY_ARCHITECTURE.md  (+41 more)
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  changelog-config.json  container-structure-test.yaml  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_report.md  security_vulnerability.yml
.github/workflows/: ci-cd-advanced.yml  ci-cd.yml  quality-gates.yml
.terragon/: config.yaml  value-metrics.json
deployment/: docker-compose.yml
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
deployment/monitoring/: prometheus.yml
deployments/terraform/: main.tf  outputs.tf  variables.tf
docs/: ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-llm-agent-architecture.md  0002-kubernetes-isolation-strategy.md  0003-vulnerability-injection-mechanism.md  001-microservices-architecture.md  002-kubernetes-orchestration.md  003-llm-agent-framework.md  README.md  template.md
docs/api/: API.md  index.html  openapi.json  openapi.yaml
docs/api/examples/: curl_examples.sh  javascript_examples.js  python_examples.py
docs/deployment/: BUILD.md
docs/guides/: README.md
docs/monitoring/: README.md  alerting.md  dashboards.md  health-checks.md  logging.md  metrics.md
docs/runbooks/: README.md  security-incident-response.md
docs/testing/: README.md
docs/workflows/: README.md  SETUP_REQUIRED.md  advanced-ci-cd-templates.md  ci-cd-requirements.md  github-actions-setup.md  quality-gates-setup.md
docs/workflows/examples/: cd.yml  ci.yml  dependency-update.yml  security-scan.yml
lightweight_experimental_results/: lightweight_validation_results_1755928508.json
monitoring/: prometheus.yml
multimodal_validation_results/: multimodal_validation_1755928588.json
research_benchmark_datasets/: master_benchmark_index.json
research_benchmark_datasets/cross_platform_security/: cross_platform_security_framework.json
research_benchmark_datasets/federated_quantum_neuromorphic/: federated_quantum_neuromorphic_benchmark.json
research_benchmark_datasets/multimodal_threat_detection/: multimodal_threat_detection_suite.json
research_benchmark_datasets/zero_shot_vulnerability/: zero_shot_vulnerability_testset.json
research_validation_results/: validation_1756422558.json
scripts/: benchmark.py  collect-metrics.py  dependency-update-automation.py  deploy_enhanced_quality.py  generate-reports.py  generate-sbom.sh  generate_api_docs.py  performance-benchmark.py  repository-health-monitor.py  run_quality_pipeline.py  security-scan-automation.sh  setup-dev.sh  simple_validation.py  validate_quality_implementation.py  validate_security_policies.py  value-discovery.py
src/gan_cyber_range/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_claude_flow_tivj5e.js  test_core_functionality.py  test_direct_core.py  test_isolated_core.py  test_simple_validation.py  test_standalone_components.py  test_suite.js
tests/e2e/: __init__.py  test_full_simulation.py
tests/fixtures/: __init__.py  cyber_range_fixtures.py  factories.py
tests/integration/: test_api_endpoints.py  test_cyber_range.py
tests/performance/: __init__.py  locustfile.py  test_agent_performance.py
tests/quality/: __init__.py  test_enhanced_quality_system.py  test_integration.py  test_monitoring.py  test_progressive_validator.py  test_quality_gates.py
tests/security/: test_isolation.py  test_security_suite.py
tests/unit/: test_agents.py  test_basic_functionality.py  test_llm_integration.py
zero_shot_vuln_validation/: zero_shot_vuln_validation_1755928701.json
(+76 files in other folders)
